ref-data-svc/deployment.yaml
# Copyright(c) 2022, Oracle and / or its affiliates.
# All rights reserved. The Universal Permissive License(UPL), Version 1.0 as shown at http: // oss.oracle.com/licenses/upl
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ref-data-deploy
  labels:
    app: ref-data-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ref-data-pod
  template:
    metadata:
      name: ref-data-pod
      labels:
        app: ref-data-pod
    spec:
      containers:
      - name: ref-data-svc
        image: iad.ocir.io/ociobenablement/ref-data-svc:latest
        #ToDo Need to make this configurable OR push resources to a universal repo like Docker or GitHub
        ports:
        - containerPort: 8090   
      imagePullSecrets:
      - name: ocirsecret
