ref-data-svc/ref-data-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ref-data-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /ref-data-svc
        pathType: Prefix
        backend:
          service:
            name: ref-data-svc
            port:
             name: ref-data-port
